--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" class="dark">
   <head>
@@ -13,12 +14,12 @@
     <style>
       body {
         font-family: 'Inter', sans-serif;
-        background-color: #121212;
+        background-color: #050505;
         color: #ffffff;
         -webkit-tap-highlight-color: transparent;
         overscroll-behavior-y: none;
+        user-select: none;
       }
-      /* Hide scrollbar for cleaner mobile UI */
       .no-scrollbar::-webkit-scrollbar {
         display: none;
       }
@@ -27,7 +28,7 @@
         scrollbar-width: none;
       }
       input[type="range"] {
-        accent-color: #22c55e;
+        accent-color: #06b6d4; /* Cyan-500 */
       }
       .glass-panel {
         background: rgba(30, 30, 30, 0.7);
@@ -35,17 +36,13 @@
         -webkit-backdrop-filter: blur(12px);
         border-top: 1px solid rgba(255, 255, 255, 0.1);
       }
-      .lyrics-scroll {
-        mask-image: linear-gradient(to bottom, transparent, black 10%, black 90%, transparent);
-        -webkit-mask-image: linear-gradient(to bottom, transparent, black 10%, black 90%, transparent);
+      @keyframes fadeOut {
+        0% { opacity: 1; visibility: visible; }
+        90% { opacity: 1; visibility: visible; }
+        100% { opacity: 0; visibility: hidden; }
       }
-      @keyframes spin {
-        from { transform: rotate(0deg); }
-        to { transform: rotate(360deg); }
-      }
-      @keyframes slideUp {
-        from { transform: translateY(100%); }
-        to { transform: translateY(0); }
+      .animate-fadeOut {
+        animation: fadeOut 3s forwards;
       }
     </style>
   <script type="importmap">
@@ -55,7 +52,10 @@
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "@capacitor/app": "https://aistudiocdn.com/@capacitor/app@^6.0.0",
+    "vite": "https://aistudiocdn.com/vite@^7.2.4",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
   }
 }
 </script>
